# src/routes/api.php
@@ -11,6 +11,7 @@ use App\Http\Controllers\Admin\UserController;
 use App\Http\Controllers\Admin\SwaggerController;
 use App\Http\Controllers\Admin\LogController;
 use Illuminate\Support\Facades\Route;
+use App\Models\Meeting;
 
 /*
 |--------------------------------------------------------------------------
@@ -37,9 +38,9 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::patch('/formats/{format}', [FormatController::class, 'partialUpdate']);
     Route::apiResource('meetings', MeetingController::class);
     Route::patch('/meetings/{meeting}', [MeetingController::class, 'partialUpdate']);
-    Route::patch('/translations/{lang}/meetings/{meeting}', [MeetingController::class, 'translate'])->can('translate', 'meeting');
-    Route::get('/translations/{lang}/meetings/{meeting}', [MeetingController::class, 'getTranslation']);
-    Route::get('/translations/{lang}/meetings', [MeetingController::class, 'searchTranslations']);
+    Route::patch('/translations/meetings/{meeting}/{lang}', [MeetingController::class, 'translate'])->can('translate', 'meeting');
+    Route::get('/translations/meetings/{meeting}/{lang}', [MeetingController::class, 'getTranslation']);
+    Route::get('/translations/meetings/{lang}', [MeetingController::class, 'searchTranslations']);
     Route::apiResource('meetings.changes', MeetingChangeController::class)->only([ 'index' ]);
     Route::apiResource('servicebodies', ServiceBodyController::class, ['parameters' => ['servicebodies' => 'serviceBody']]);
     Route::patch('/servicebodies/{serviceBody}', [ServiceBodyController::class, 'partialUpdate']);
